testsuite/tests/th/QQTopError.hs
{-# LANGUAGE QuasiQuotes #-}
module QQTopError where

main = [id|hello|]

main2 = [Prelude.id|hello|]

